Fix overflowing images (#1460)

--- a/app/css/components/textual-content.css
+++ b/app/css/components/textual-content.css
@@ -3,6 +3,10 @@
 .c-textual-content {
     @apply font-body;
 
+    & img {
+        max-width: 100%;
+    }
+
     &.--large {
         & * {
             @apply text-16;
